# WebScrapingAgentAutomationCrew

./: README.md  pyproject.toml
Data/: CORECTION.json  ENSAK&ENIAD.json  eniad.ump.json  ensasafi&eniad.json  hetic&ENIAD.json  inpt&ENIAD.json  reglement_int étudiants ENIADB.json  uir&ENIAD.json
knowledge/: user_preference.txt
src/WebScrapingAgentAutomationCrew/: crew.py  main.py
src/WebScrapingAgentAutomationCrew/config/: agents.yaml  tasks.yaml
src/autonomous_web_scraper_crew_for_any_website/: crew.py  main.py
src/autonomous_web_scraper_crew_for_any_website/config/: agents.yaml  tasks.yaml
