[project]
name = "WebScrapingAgentAutomationCrew"
version = "0.1.0"
description = "A web scraping automation crew using CrewAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.114.0",
    "crewai-tools>=0.40.1",
    "pyyaml>=6.0.2",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/WebScrapingAgentAutomationCrew"]