[project]
name = "autonomous_web_scraper_crew_for_any_website"
version = "0.1.0"
description = "autonomous_web_scraper_crew_for_any_website using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
autonomous_web_scraper_crew_for_any_website = "autonomous_web_scraper_crew_for_any_website.main:run"
run_crew = "autonomous_web_scraper_crew_for_any_website.main:run"
train = "autonomous_web_scraper_crew_for_any_website.main:train"
replay = "autonomous_web_scraper_crew_for_any_website.main:replay"
test = "autonomous_web_scraper_crew_for_any_website.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
